# heartpyapp_clean

./: .gitignore  CMakeLists.txt  Metrics_Report.md  PROJECT_STRUCTURE.md  README.md  package-lock.json
HeartPyApp/: .watchmanconfig  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json  tsconfig.tsbuildinfo
HeartPyApp/android/: settings.gradle
HeartPyApp/android/app/: build.gradle
HeartPyApp/android/app/src/main/: AndroidManifest.xml
HeartPyApp/android/app/src/main/assets/: index.android.bundle
HeartPyApp/android/app/src/main/cpp/: CMakeLists.txt  ppg_simd.cpp
HeartPyApp/android/app/src/main/java/com/heartpyapp/: MainActivity.kt  MainApplication.kt
HeartPyApp/android/app/src/main/java/com/heartpyapp/ppg/: PPGMeanPlugin.kt
HeartPyApp/android/app/src/main/res/values/: strings.xml
HeartPyApp/ios/: .xcode.env.local  PPGCameraManager.h  PPGCameraManager.mm  PPGMeanPlugin.m  Podfile
HeartPyApp/ios/HeartPyApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
HeartPyApp/ios/HeartPyApp.xcodeproj/: project.pbxproj
HeartPyApp/ios/HeartPyApp.xcodeproj/xcshareddata/xcschemes/: HeartPyApp.xcscheme
HeartPyApp/ios/HeartPyApp.xcworkspace/: contents.xcworkspacedata
HeartPyApp/ios/HeartPyAppTests/: HeartPyAppTests.m
HeartPyApp/scripts/: check_ppg_acceptance.js  fix-file-limit.sh
HeartPyApp/scripts/__tests__/: check_ppg_acceptance.test.js
HeartPyApp/src/components/: HiddenSettings.tsx  PPGCamera.tsx  PPGDisplay.tsx  PPGParameterControls.tsx  PrimaryMetricsCard.tsx  SkiaWaveform.tsx
HeartPyApp/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  IconButton.tsx  SettingRow.tsx  Typography.tsx  index.ts
HeartPyApp/src/contexts/: ThemeContext.tsx
HeartPyApp/src/core/: HeartPyWrapper.ts  PPGAnalyzer.ts  PPGConfig.ts  RingBuffer.ts
HeartPyApp/src/core/state/: ppgStore.ts
HeartPyApp/src/hooks/: useAnalyzer.ts  useSwipeGesture.ts  useThemeColor.ts
HeartPyApp/src/navigation/: RootNavigator.tsx
HeartPyApp/src/screens/: MeasureScreen.tsx
HeartPyApp/src/styles/: colors.ts  responsive.ts  spacing.ts  typography.ts
HeartPyApp/src/theme/: colors.ts  index.ts  layout.ts  spacing.ts  typography.ts
HeartPyApp/src/types/: PPGTypes.ts
cpp/: heartpy_core.cpp  heartpy_stream.cpp
docs/: new-arch-readiness.md
react-native-heartpy/: README.md  jest.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.build.json
react-native-heartpy/__mocks__/: NativeHeartPy.ts  react-native.ts
react-native-heartpy/__tests__/: api.test.ts  rt_errors.test.ts  rt_path.test.ts
react-native-heartpy/android/: .project  build.gradle
react-native-heartpy/android/src/main/: AndroidManifest.xml
react-native-heartpy/android/src/main/cpp/: CMakeLists.txt  native_analyze.cpp
react-native-heartpy/android/src/main/java/com/facebook/fbreact/specs/: NativeHeartPySpec.java
react-native-heartpy/android/src/main/java/com/heartpy/: HeartPyModule.java  HeartPyPackage.java
react-native-heartpy/cpp/: rn_options_builder.cpp  rn_options_builder.h
react-native-heartpy/examples/: AppUsage.tsx  Benchmark60s.ts  BinaryMaskDemo.tsx  BridgeBench.ts  JSIProbe.ts  ParityCheck.ts  RealtimeDemo.tsx  RealtimeTest.ts
react-native-heartpy/ios/: HeartPy.podspec  HeartPyModule.h  HeartPyModule.mm  HeartPyModuleSimple.h  HeartPyModuleSimple.mm  heartpy_core.h  heartpy_stream.h  rn_options_builder.h
react-native-heartpy/src/: NativeHeartPy.ts  index.ts
react-native-heartpy/src/specs/: NativeHeartPy.ts
react-native-heartpy/src/types/: heartpy.ts
